name:                chainblock
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/chainblock#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

  executable chainblock
  hs-source-dirs:      exec
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  hs-source-dirs:       src
  exposed-modules:      PassCrypto.PassCrypto
  default-language:     Haskell2010
  -- ghc-options:          -Wall -Werror
  build-depends:        base >= 4.7 && < 5
                      , base16-bytestring
                      , binary
                      , bytestring
                      , cryptonite
                      , memory
                      , text

test-suite            webapp-test
 type:                exitcode-stdio-1.0

 hs-source-dirs:
   app
   test

 main-is: Spec.hs

 build-depends:         base
                      , base16-bytestring
                      , bytestring
                      , cryptonite
                      , hspec
                      , memory
                      , chainblock
                      , text

 ghc-options:         -Wall
                      -fwarn-unused-matches
                      -fwarn-unused-binds
                      -fwarn-unused-imports
                      -fno-warn-orphans
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N

 default-language:    Haskell2010

 default-extensions:  OverloadedStrings

 other-modules:       PassCryptoSpec
