name:                chainblock
version:             0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/githubuser/chainblock#readme
license:                BSD3
license-file:           LICENSE
author:                 Charles Crain
maintainer:             craincharles@gmail.com
copyright:              2017 Charles Crain
category:               Web
build-type:             Simple
cabal-version:          >=1.10
extra-source-files:     README.md

executable chainblock
  hs-source-dirs:       app
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , aeson
                      , chainblock
                      , mtl
                      , servant-server
                      , text
                      , wai
                      , wai-cors
                      , wai-extra
                      , warp


library
  hs-source-dirs:       src
  exposed-modules:      ChainBlock.Crypto
                      , ChainBlock.Crypto.Types
                      , Config.AppConfig
                      , Config.Environment
                      , ChainBlock.API
                      , ChainBlock.API.Types
                      , ChainBlock.API.ContentTypes
                      , ChainBlock.API.Interfaces
                      , ChainBlock.Business
                      , ChainBlock.DB
                      , ChainBlock.DB.Interfaces
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , aeson
                      , attoparsec
                      , base16-bytestring
                      , binary
                      , bytestring
                      , utf8-string
                      , cryptonite
                      , opaleye
                      , postgresql-simple
                      , product-profunctors
                      , http-media
                      , http-api-data
                      , memory
                      , mtl
                      , servant-server
                      , text

test-suite              webapp-test
 type:                  exitcode-stdio-1.0

 hs-source-dirs:
   app
   test

 main-is: Spec.hs

 build-depends:         base
                      , base16-bytestring
                      , bytestring
                      , aeson
                      , cryptonite
                      , hspec
                      , memory
                      , chainblock
                      , lens
                      , text
                      , warp
                      , wreq
                      , mtl
                      , servant-server
                      , wai
                      , wai-cors
                      , wai-extra

 ghc-options:         -Wall
                      -fwarn-unused-matches
                      -fwarn-unused-binds
                      -fwarn-unused-imports
                      -fno-warn-orphans
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N

 default-language:    Haskell2010

 default-extensions:  OverloadedStrings

 other-modules:       CryptoSpec
