name:                chainblock
version:             0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/githubuser/chainblock#readme
license:                BSD3
license-file:           LICENSE
author:                 Charles Crain
maintainer:             craincharles@gmail.com
copyright:              2017 Charles Crain
category:               Web
build-type:             Simple
cabal-version:          >=1.10
extra-source-files:     README.md

executable chainblock
  hs-source-dirs:       app
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7
                      , aeson
                      , attoparsec
                      , bytestring
                      , chainblock
                      , http-media
                      , mtl
                      , postgresql-simple
                      , servant-server
                      , text
                      , wai
                      , wai-cors
                      , wai-extra
                      , warp


library
  hs-source-dirs:       src
  exposed-modules:      ChainBlock.API.Types
                      , ChainBlock.Business
                      , ChainBlock.Business.Interface
                      , ChainBlock.Business.Types
                      , ChainBlock.Crypto
                      , ChainBlock.Crypto.Types
                      , ChainBlock.DB.Interface
                      , ChainBlock.DB.Postgres
                      , ChainBlock.DB.Postgres.Setup
                      , ChainBlock.DB.Postgres.Tables
                      , ChainBlock.DB.Postgres.Types
                      , ChainBlock.DB.Types
                      , ChainBlock.Errors
                      , ChainBlock.Logging
                      , Config.AppConfig
                      , Config.Environment

  default-language:     Haskell2010
  build-depends:        base >= 4.7 
                      , aeson
                      , base16-bytestring
                      , binary
                      , bytestring
                      , cryptonite
                      , exceptions
                      , QuickCheck 
                      , http-api-data
                      , pretty
                      , memory
                      , monad-logger
                      , fast-logger
                      , mtl
                      , opaleye
                      , postgresql-simple
                      , product-profunctors
                      , servant-server
                      , text
                      , utf8-string

test-suite              webapp-test
 type:                  exitcode-stdio-1.0

 hs-source-dirs:
   app
   test

 main-is: Spec.hs

 build-depends:         aeson
                      , attoparsec
                      , base
                      , base16-bytestring
                      , bytestring
                      , chainblock
                      , cryptonite
                      , QuickCheck 
                      , hspec
                      , http-media
                      , lens
                      , memory
                      , mtl
                      , postgresql-simple
                      , servant-server
                      , text
                      , wai
                      , wai-cors
                      , wai-extra
                      , warp
                      , wreq

 ghc-options:         -Wall
                      -fwarn-unused-matches
                      -fwarn-unused-binds
                      -fwarn-unused-imports
                      -fno-warn-orphans
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N

 default-language:    Haskell2010

 default-extensions:  OverloadedStrings

 other-modules:       CryptoSpec
