name:                password-manager
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/password-manager#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable password-manager
  hs-source-dirs:      exec
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

library
  hs-source-dirs:       src
  exposed-modules:      PassCrypto.PassCrypto
  default-language:     Haskell2010
  -- ghc-options:          -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , cryptonite
                     , memory
                     , text
