name:                tholos
version:             0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/githubuser/tholos#readme
license:                BSD3
license-file:           LICENSE
author:                 Charles Crain
maintainer:             craincharles@gmail.com
copyright:              2017 Charles Crain
category:               Web
build-type:             Simple
cabal-version:          >=1.10
extra-source-files:     README.md

executable tholos
  hs-source-dirs:       app
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7
                      , aeson
                      , attoparsec
                      , bytestring
                      , tholos
                      , http-media
                      , mtl
                      , postgresql-simple
                      , servant-server
                      , text
                      , wai
                      , wai-cors
                      , wai-extra
                      , warp


library
  hs-source-dirs:       src
  exposed-modules:      Tholos.API.Types
                      , Config.AppConfig
                      , Config.Environment
                      , Tholos.Business
                      , Tholos.Business.Interface
                      , Tholos.Business.Types
                      , Tholos.Crypto
                      , Tholos.Crypto.Types
                      , Tholos.DB.Interface
                      , Tholos.DB.Postgres
                      , Tholos.DB.Postgres.Setup
                      , Tholos.DB.Postgres.Tables
                      , Tholos.DB.Postgres.Types
                      , Tholos.Errors
                      , Tholos.Logging
                      , Tholos.Monad
                      , Tholos.Types

  default-language:     Haskell2010
  build-depends:        base >= 4.7 
                      , aeson
                      , base16-bytestring
                      , binary
                      , bytestring
                      , cryptonite
                      , exceptions
                      , QuickCheck 
                      , http-api-data
                      , pretty
                      , memory
                      , monad-logger
                      , fast-logger
                      , mtl
                      , opaleye
                      , postgresql-simple
                      , product-profunctors
                      , servant-server
                      , text
                      , utf8-string

test-suite              webapp-test
 type:                  exitcode-stdio-1.0

 hs-source-dirs:
   app
   test

 main-is: Spec.hs

 build-depends:         aeson
                      , attoparsec
                      , base
                      , base16-bytestring
                      , bytestring
                      , tholos
                      , cryptonite
                      , QuickCheck 
                      , hspec
                      , http-media
                      , lens
                      , memory
                      , mtl
                      , postgresql-simple
                      , servant-server
                      , text
                      , wai
                      , wai-cors
                      , wai-extra
                      , warp
                      , wreq

 ghc-options:         -Wall
                      -fwarn-unused-matches
                      -fwarn-unused-binds
                      -fwarn-unused-imports
                      -fno-warn-orphans
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N

 default-language:    Haskell2010

 default-extensions:  OverloadedStrings

 other-modules:       CryptoSpec
